--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission android:name="androidx.car.app.NAVIGATION_TEMPLATES"/>
-    <uses-permission android:name="androidx.car.app.ACCESS_SURFACE"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="androidx.car.app.NAVIGATION_TEMPLATES" />
+    <uses-permission android:name="androidx.car.app.ACCESS_SURFACE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.AndroidAutoDemo"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -31,28 +34,31 @@
             </intent-filter>
         </activity>
 
-        <meta-data android:name="com.google.android.gms.car.application"
+        <meta-data
+            android:name="com.google.android.gms.car.application"
             android:resource="@xml/automotive_app_desc"
             tools:ignore="MetadataTagInsideApplicationTag" />
-
-        <meta-data android:name="androidx.car.app.minCarApiLevel"
+        <meta-data
+            android:name="androidx.car.app.minCarApiLevel"
             android:value="1"
             tools:ignore="MetadataTagInsideApplicationTag" />
+
         <service
             android:name=".MyCarAppService"
             android:exported="true"
-            android:label="@string/app_name"
             android:icon="@drawable/ic_launcher"
-           >
-
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="androidx.car.app.CarAppService" />
-                <category android:name="androidx.car.app.category.NAVIGATION"/>
-                <category android:name="androidx.car.app.category.FEATURE_CLUSTER"/>
+
+                <category android:name="androidx.car.app.category.NAVIGATION" />
+                <category android:name="androidx.car.app.category.FEATURE_CLUSTER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="androidx.car.app.action.NAVIGATE" />
-                <category android:name="android.intent.category.DEFAULT"/>
+
+                <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:scheme="geo" />
             </intent-filter>
         </service>
