Google maps implementation for trip detail screen to navigate on real map

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,23 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+    <!-- For PlaceListMapTemplate -->
+    <uses-permission android:name="androidx.car.app.MAP_TEMPLATES" />
+
+    <!-- For the navigation demos. -->
     <uses-permission android:name="androidx.car.app.NAVIGATION_TEMPLATES" />
     <uses-permission android:name="androidx.car.app.ACCESS_SURFACE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+    <!-- For Access to Car Hardware. -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="com.google.android.gms.permission.CAR_MILEAGE" />
+    <uses-permission android:name="com.google.android.gms.permission.CAR_SPEED" />
+    <uses-permission android:name="com.google.android.gms.permission.CAR_FUEL" />
 
     <application
         android:allowBackup="true"
@@ -36,6 +47,10 @@
             android:resource="@xml/automotive_app_desc"
             tools:ignore="MetadataTagInsideApplicationTag" />
         <meta-data
+            android:name="androidx.car.app.theme"
+            android:resource="@style/CarAppTheme"
+            tools:ignore="MetadataTagInsideApplicationTag" />
+        <meta-data
             android:name="androidx.car.app.minCarApiLevel"
             android:value="1"
             tools:ignore="MetadataTagInsideApplicationTag" />
@@ -43,6 +58,7 @@
         <service
             android:name=".MyCarAppService"
             android:exported="true"
+            android:foregroundServiceType="location"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name">
             <intent-filter>
@@ -53,9 +69,7 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="androidx.car.app.action.NAVIGATE" />
-
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data android:scheme="geo" />
             </intent-filter>
         </service>
